--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>登入</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +20,7 @@
         <div class="row justify-content-center">
           <h1 class="h3 mb-3 font-weight-normal">請先登入</h1>
           <div class="col-8">
-            <form id="form" class="form-signin">
+            <form id="form" class="form-signin" @submit.prevent="login">
               <div class="form-floating mb-3">
                 <input
                   type="email"
@@ -29,6 +29,7 @@
                   placeholder="name@example.com"
                   required
                   autofocus
+                  v-model.trim="user.username"
                 />
                 <label for="username">Email address</label>
               </div>
@@ -39,6 +40,7 @@
                   id="password"
                   placeholder="Password"
                   required
+                  v-model.trim="user.password"
                 />
                 <label for="password">Password</label>
               </div>
