feat: 完成 week 3 功能 | 剩新增十筆產品資訊

--- a/products.html
+++ b/products.html
@@ -17,7 +17,9 @@
     <div id="app">
       <div class="container">
         <div class="text-end mt-4">
-          <button class="btn btn-primary">建立新的產品</button>
+          <button class="btn btn-primary" @click="modelHandler('createBtn')">
+            建立新的產品
+          </button>
         </div>
         <table class="table mt-4">
           <thead>
@@ -31,21 +33,29 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td></td>
-              <td></td>
-              <td class="text-end"></td>
-              <td class="text-end"></td>
+            <tr v-for="product in products" :key="product.id">
+              <td>{{ product.category }}</td>
+              <td>{{ product.title }}</td>
+              <td class="text-start">NT$ {{ product.origin_price }}</td>
+              <td class="text-start">NT$ {{ product.price }}</td>
               <td>
-                <span class="text-success">啟用</span>
-                <span>未啟用</span>
+                <span v-if="product.is_enabled" class="text-success">啟用</span>
+                <span v-else>未啟用</span>
               </td>
               <td>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-outline-primary btn-sm">
+                  <button
+                    type="button"
+                    class="btn btn-outline-primary btn-sm"
+                    @click="modelHandler('editBtn',product)"
+                  >
                     編輯
                   </button>
-                  <button type="button" class="btn btn-outline-danger btn-sm">
+                  <button
+                    type="button"
+                    class="btn btn-outline-danger btn-sm"
+                    @click="modelHandler('deleteBtn',product)"
+                  >
                     刪除
                   </button>
                 </div>
@@ -54,7 +64,8 @@
           </tbody>
         </table>
       </div>
-      <!-- Modal -->
+
+      <!-- Modal start-->
       <div
         id="productModal"
         ref="productModal"
@@ -67,7 +78,7 @@
           <div class="modal-content border-0">
             <div class="modal-header bg-dark text-white">
               <h5 id="productModalLabel" class="modal-title">
-                <span>新增產品</span>
+                <span>{{ isNew ? '新增產品' : '編輯產品' }}</span>
               </h5>
               <button
                 type="button"
@@ -79,29 +90,72 @@
             <div class="modal-body">
               <div class="row">
                 <div class="col-sm-4">
-                  <div class="mb-2">
+                  <!-- 主要圖片 -->
+                  <div class="mb-3">
                     <div class="mb-3">
-                      <label for="imageUrl" class="form-label"
-                        >輸入圖片網址</label
-                      >
+                      <label for="imageUrl" class="form-label">主要圖片</label>
                       <input
                         type="text"
                         class="form-control"
                         placeholder="請輸入圖片連結"
+                        v-model="tempProduct.imageUrl"
                       />
                     </div>
-                    <img class="img-fluid" src="" alt="" />
+                    <img
+                      class="img-fluid"
+                      :src="tempProduct.imageUrl"
+                      alt="mainImg"
+                      v-if="tempProduct.imageUrl"
+                    />
                   </div>
-                  <div>
-                    <button
-                      class="btn btn-outline-primary btn-sm d-block w-100"
+                  <!-- 多圖新增 -->
+                  <h3 class="mb-3">多圖新增</h3>
+                  <!-- 因為內層直接用 length 判斷會造成渲染錯誤，所以要多包一層 if 讓 imagesUrl 確定有東西才渲染 -->
+                  <div v-if="Array.isArray(tempProduct.imagesUrl)">
+                    <div
+                      class="mb-2"
+                      v-for="(img, key) in tempProduct.imagesUrl"
+                      :key="key"
                     >
-                      新增圖片
-                    </button>
+                      <div class="mb-3">
+                        <label for="imageUrl" class="form-label"
+                          >輸入圖片網址</label
+                        >
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="請輸入圖片連結"
+                          v-model="tempProduct.imagesUrl[key]"
+                        />
+                      </div>
+                      <img class="img-fluid" :src="img" :alt="'img' + key" />
+                    </div>
+                    <!-- 判斷是否有陣列或是陣列最後一筆是否有值 -->
+                    <div
+                      v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]"
+                    >
+                      <button
+                        class="btn btn-outline-primary btn-sm d-block w-100"
+                        @click="addImage"
+                      >
+                        新增圖片
+                      </button>
+                    </div>
+                    <div v-else>
+                      <button
+                        class="btn btn-outline-danger btn-sm d-block w-100"
+                        @click="deleteImage"
+                      >
+                        刪除圖片
+                      </button>
+                    </div>
                   </div>
                   <div v-else>
-                    <button class="btn btn-outline-danger btn-sm d-block w-100">
-                      刪除圖片
+                    <button
+                      class="btn btn-outline-primary btn-sm d-block w-100"
+                      @click="createImage"
+                    >
+                      新增圖片
                     </button>
                   </div>
                 </div>
@@ -113,6 +167,7 @@
                       type="text"
                       class="form-control"
                       placeholder="請輸入標題"
+                      v-model="tempProduct.title"
                     />
                   </div>
 
@@ -124,6 +179,7 @@
                         type="text"
                         class="form-control"
                         placeholder="請輸入分類"
+                        v-model="tempProduct.category"
                       />
                     </div>
                     <div class="mb-3 col-md-6">
@@ -133,6 +189,7 @@
                         type="text"
                         class="form-control"
                         placeholder="請輸入單位"
+                        v-model="tempProduct.unit"
                       />
                     </div>
                   </div>
@@ -146,6 +203,7 @@
                         min="0"
                         class="form-control"
                         placeholder="請輸入原價"
+                        v-model="tempProduct.origin_price"
                       />
                     </div>
                     <div class="mb-3 col-md-6">
@@ -156,6 +214,7 @@
                         min="0"
                         class="form-control"
                         placeholder="請輸入售價"
+                        v-model="tempProduct.price"
                       />
                     </div>
                   </div>
@@ -168,8 +227,8 @@
                       type="text"
                       class="form-control"
                       placeholder="請輸入產品描述"
-                    >
-                    </textarea>
+                      v-model="tempProduct.description"
+                    ></textarea>
                   </div>
                   <div class="mb-3">
                     <label for="content" class="form-label">說明內容</label>
@@ -178,8 +237,8 @@
                       type="text"
                       class="form-control"
                       placeholder="請輸入說明內容"
-                    >
-                    </textarea>
+                      v-model="tempProduct.content"
+                    ></textarea>
                   </div>
                   <div class="mb-3">
                     <div class="form-check">
@@ -189,6 +248,7 @@
                         type="checkbox"
                         :true-value="1"
                         :false-value="0"
+                        v-model="tempProduct.is_enabled"
                       />
                       <label class="form-check-label" for="is_enabled"
                         >是否啟用</label
@@ -206,11 +266,18 @@
               >
                 取消
               </button>
-              <button type="button" class="btn btn-primary">確認</button>
+              <button
+                type="button"
+                class="btn btn-primary"
+                @click="updateProductHandler"
+              >
+                確認
+              </button>
             </div>
           </div>
         </div>
       </div>
+
       <div
         id="delProductModal"
         ref="delProductModal"
@@ -244,7 +311,13 @@
               >
                 取消
               </button>
-              <button type="button" class="btn btn-danger">確認刪除</button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                @click="deleteProduct"
+              >
+                確認刪除
+              </button>
             </div>
           </div>
         </div>
